# GraphSimulation

./: .gitignore  CMakeLists.txt  todo.md
src/: App.cpp  App.h  Constants.cpp  Constants.h  main.cpp
src/Components/: Button.cpp  Button.h  Component.cpp  Component.h  IconButton.cpp  IconButton.h  IconButtonGroup.cpp  IconButtonGroup.h  TaskBar.cpp  TaskBar.h
src/headers/: Graph.cpp  Graph.h  Node.cpp  Node.h  Simulation.cpp  Simulation.h  Utils.cpp  Utils.h  window.cpp  window.h
src/pages/: Help.cpp  Help.h  Home.cpp  Home.h  Page.cpp  Page.h  Start.cpp  Start.h  home.cpp  home.h  page.cpp  page.h
